--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             <li>
                                 <a class="dropdown-item" href="">About Shivsena &raquo;</a>
                                 <ul class="dropdown-menu dropdown-submenu">
-                                    <li><a class="dropdown-item" href="https://rb.gy/5glkd">History</a></li>
+                                    <li><a class="dropdown-item" target="_blank" href="https://rb.gy/5glkd">History</a></li>
                                     <li><a class="dropdown-item" href="ideology.html">Ideology</a></li>
 
                             </li>
@@ -115,7 +115,7 @@
     <div class="mysidenav" id="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link disabled" href="index.html">Home</a>
         </div>
         <div class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -152,17 +152,16 @@
                 <a class="dropdown-item" href="mla.html">MLA</a>
                 <a class="dropdown-item" href="ideology.html">Ideology</a>
                 <a class="dropdown-item" href="https://rb.gy/5glkd">History</a>
-                <a class="dropdown-item" href="">About Shivsena</a>
             </div>
         </div>
         <div class="nav-item">
             <a class="nav-link" href="contact.html">Contact us</a>
         </div>
         <div class="nav-item">
-            <a class="margin" href="form.html">Join Shivsena</a>
+            <a class="btn margin" href="form.html">Join Shivsena</a>
         </div>
         <div class="nav-item">
-            <a class="margin" href="donation.html">Make a Donation</a>
+            <a class="btn margin" href="donation.html">Make a Donation</a>
         </div>
     </div>
     <!-- sidenav end -->
