--- a/ourmp.html
+++ b/ourmp.html
@@ -132,28 +132,27 @@
             </div>
         </div>
         <div class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
                 Party
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="">President</a>
                 <a class="dropdown-item" href="ministers.html">Ministers</a>
-                <a class="dropdown-item" href="ourmp.html">MP</a>
+                <a class="dropdown-item disabled" href="ourmp.html">MP</a>
                 <a class="dropdown-item" href="mla.html">MLA</a>
                 <a class="dropdown-item" href="ideology.html">Ideology</a>
                 <a class="dropdown-item" href="https://rb.gy/5glkd">History</a>
-                <a class="dropdown-item" href="">About Shivsena</a>
             </div>
         </div>
         <div class="nav-item">
             <a class="nav-link" href="contact.html">Contact us</a>
         </div>
         <div class="nav-item">
-            <a class="margin" href="form.html">Join Shivsena</a>
+            <a class="btn margin" href="form.html">Join Shivsena</a>
         </div>
         <div class="nav-item">
-            <a class="margin" href="donation.html">Make a Donation</a>
+            <a class="btn margin" href="donation.html">Make a Donation</a>
         </div>
     </div>
     <!-- sidenav end -->
@@ -270,7 +269,7 @@
         </div>
     </div>
     <!-- Mp card End  -->
-
+    <script src="JavaScript/slide.js"></script>
     <!-- Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
