--- a/ideology.html
+++ b/ideology.html
@@ -142,19 +142,18 @@
                 <a class="dropdown-item" href="ministers.html">Ministers</a>
                 <a class="dropdown-item" href="ourmp.html">MP</a>
                 <a class="dropdown-item" href="mla.html">MLA</a>
-                <a class="dropdown-item" href="ideology.html">Ideology</a>
+                <a class="dropdown-item disabled" href="ideology.html">Ideology</a>
                 <a class="dropdown-item" href="https://rb.gy/5glkd">History</a>
-                <a class="dropdown-item" href="">About Shivsena</a>
             </div>
         </div>
         <div class="nav-item">
             <a class="nav-link" href="contact.html">Contact us</a>
         </div>
         <div class="nav-item">
-            <a class="margin" href="form.html">Join Shivsena</a>
+            <a class="btn margin" href="form.html">Join Shivsena</a>
         </div>
         <div class="nav-item">
-            <a class="margin" href="donation.html">Make a Donation</a>
+            <a class="btn margin" href="donation.html">Make a Donation</a>
         </div>
     </div>
     <!-- sidenav end -->
