--- a/ministers.html
+++ b/ministers.html
@@ -129,7 +129,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="PressReleases.html">Press Releases</a>
                 <a class="dropdown-item" href="photogallery.html">Photo Gallery</a>
-                <a class="dropdown-item" href="media.html">Video Gallery</a>
+                <a class="dropdown-item disabled" href="media.html">Video Gallery</a>
             </div>
         </div>
         <div class="nav-item dropdown">
@@ -144,17 +144,16 @@
                 <a class="dropdown-item" href="mla.html">MLA</a>
                 <a class="dropdown-item" href="ideology.html">Ideology</a>
                 <a class="dropdown-item" href="https://rb.gy/5glkd">History</a>
-                <a class="dropdown-item" href="">About Shivsena</a>
             </div>
         </div>
         <div class="nav-item">
             <a class="nav-link" href="contact.html">Contact us</a>
         </div>
         <div class="nav-item">
-            <a class="margin" href="form.html">Join Shivsena</a>
+            <a class="btn margin" href="form.html">Join Shivsena</a>
         </div>
         <div class="nav-item">
-            <a class="margin" href="donation.html">Make a Donation</a>
+            <a class="btn margin" href="donation.html">Make a Donation</a>
         </div>
     </div>
     <!-- sidenav end -->
@@ -412,15 +411,9 @@
 
     <script src="JavaScript/slide.js"></script>
     <!-- Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 </body>
 
