--- a/ministers.html
+++ b/ministers.html
@@ -139,7 +139,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="">President</a>
-                <a class="dropdown-item" href="ministers.html">Ministers</a>
+                <a class="dropdown-item disabled" href="ministers.html">Ministers</a>
                 <a class="dropdown-item" href="ourmp.html">MP</a>
                 <a class="dropdown-item" href="mla.html">MLA</a>
                 <a class="dropdown-item" href="ideology.html">Ideology</a>
