--- a/photogallery.html
+++ b/photogallery.html
@@ -131,7 +131,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="PressReleases.html">Press Releases</a>
-                <a class="dropdown-item" href="photogallery.html">Photo Gallery</a>
+                <a class="dropdown-item disabled" href="photogallery.html">Photo Gallery</a>
                 <a class="dropdown-item" href="media.html">Video Gallery</a>
             </div>
         </div>
@@ -154,10 +154,10 @@
             <a class="nav-link" href="contact.html">Contact us</a>
         </div>
         <div class="nav-item">
-            <a class="margin" href="form.html">Join Shivsena</a>
+            <a class="btn margin" href="form.html">Join Shivsena</a>
         </div>
         <div class="nav-item">
-            <a class="margin" href="donation.html">Make a Donation</a>
+            <a class="btn margin" href="donation.html">Make a Donation</a>
         </div>
     </div>
     <!-- sidenav end -->
@@ -170,7 +170,7 @@
     <!-- gallery -->
     <section class="gallery-class">
         <div class="image-gallery">
-            <div class="responsive">
+            <div class="photo-responsive">
                 <div class="gallery">
                     <div class="card">
                         <a target="_blank" href="image/img.jpeg">
@@ -209,7 +209,7 @@
                 </div>
             </div>
 
-            <div class="responsive">
+            <div class="photo-responsive">
                 <div class="gallery">
                     <div class="card">
                         <a target="_blank" href="image/img.jpeg">
@@ -248,7 +248,7 @@
                 </div>
             </div>
 
-            <div class="responsive">
+            <div class="photo-responsive">
                 <div class="gallery">
                     <div class="card">
                         <a target="_blank" href="image/img.jpeg">
@@ -287,7 +287,7 @@
                 </div>
             </div>
 
-            <div class="responsive">
+            <div class="photo-responsive">
                 <div class="gallery">
                     <div class="card">
                         <a target="_blank" href="image/img.jpeg">
@@ -333,16 +333,11 @@
 
 
     <!-- Bootstrap JS -->
+    <script src="JavaScript/slide.js"></script>
     <script src="JavaScript/share.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"  crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 </html>
